force-app/main/default/objects/Quote/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 1</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Quotes Approver 1</relationshipLabel>
    <relationshipName>QuotesApprover1</relationshipName>
    <type>Lookup</type>
</CustomField>