force-app/main/default/objects/Quote/fields/Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes Approver 2</relationshipLabel>
    <relationshipName>QuotesApprover2</relationshipName>
    <type>Lookup</type>
</CustomField>