force-app/main/default/objects/Quote/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Approver_1__c</columns>
    <columns>Approver_2__c</columns>
    <columns>Approver_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
</ListView>